--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./assets/styles/style.css">
-  <link rel="icon" href="./favicon.ico">
+  <link rel="stylesheet" href="./src/assets/styles/style.css">
+  <link rel="icon" href="./src/favicon.ico">
   <title>Inicio - Neyen Vrhovski</title>
 </head>
 
@@ -30,9 +30,9 @@
                 </div>
               </div>
               <div class="md:block md:ml-10 md:pr-4 md:space-x-8">
-                <a href="about.html" class="font-medium text-gray-500 hover:text-gray-900 ml-5">Sobre Mi</a>
-                <a href="projects.html" class="font-medium text-gray-500 hover:text-gray-900 ml-5">Proyectos</a>
-                <a href="contact.html" class="font-medium text-gray-500 hover:text-gray-900 ml-5">Contacto</a>
+                <a href="./src/about.html" class="font-medium text-gray-500 hover:text-gray-900 ml-5">Sobre Mi</a>
+                <a href="./src/projects.html" class="font-medium text-gray-500 hover:text-gray-900 ml-5">Proyectos</a>
+                <a href="./src/contact.html" class="font-medium text-gray-500 hover:text-gray-900 ml-5">Contacto</a>
               </div>
             </nav>
           </div>
@@ -46,14 +46,14 @@
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
               Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con apenas 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguir profesionalizandome y ser cada día mas productivo.</p>
-              <a href="projects.html"><button class="hvr-bounce-in projectsButton">Ver mis proyectos</button></a>
+              <a href="./src/projects.html"><button class="hvr-bounce-in projectsButton">Ver mis proyectos</button></a>
           </div>
         </main>
       </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="./assets/img/profilepicture.png" alt="Neyen Vrhovski">
+        src="./src/assets/img/profilepicture.png" alt="Neyen Vrhovski">
     </div>
   </div>
   <div class="bg-gray-50">
@@ -64,22 +64,22 @@
       </h2>
       <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0 footerContainer">
         <a target="_blank" href="https://github.com/NeyenVrhovski">
-            <img src="./assets/icons/github-icon.png" alt="Github"/>
+            <img src="./src/assets/icons/github-icon.png" alt="Github"/>
         </a>
         <a target="_blank" href="https://www.facebook.com/neyen.vrhovski">
-          <img src="./assets/icons/facebook-icon.png" alt="Facebook"/>
+          <img src="./src/assets/icons/facebook-icon.png" alt="Facebook"/>
         </a>
         <a target="_blank" href="https://twitter.com/neyenvrhovski">
-          <img src="./assets/icons/twitter-icon.png" alt="Twitter"/>
+          <img src="./src/assets/icons/twitter-icon.png" alt="Twitter"/>
         </a>
         <a target="_blank" href="https://www.linkedin.com/in/neyen-vrhovski-1138a3224/">
-          <img src="./assets/icons/linkedin-icon.png" alt="Linkedin"/>
+          <img src="./src/assets/icons/linkedin-icon.png" alt="Linkedin"/>
         </a>
         <a target="_blank" href="https://www.instagram.com/neyenvrhovski/">
-          <img src="./assets/icons/instagram-icon.png" alt="Instagram"/>
+          <img src="./src/assets/icons/instagram-icon.png" alt="Instagram"/>
         </a>
         <a href="mailto:neyenvrhovski@gmail.com">
-          <img src="./assets/icons/mail-icon.png" alt="Email"/>
+          <img src="./src/assets/icons/mail-icon.png" alt="Email"/>
         </a>
       </div>
     </div>
