--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="./assets/styles/style.css">
-  <link rel="icon" href="./favicon.ico">
+  <link rel="icon" href="favicon.ico">
   <title>Sobre Mi - Neyen Vrhovski</title>
 </head>
 
@@ -23,7 +23,7 @@
             <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
               <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
                 <div class="flex items-center justify-between w-full md:w-auto">
-                  <a href="index.html">
+                  <a href="../index.html">
                     <span class="sr-only">Title</span>
                     <img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Icono Principal">
                   </a>
@@ -46,7 +46,7 @@
           <span class="block">Sobre Mi</span>
         </h1>
         <div class="aboutImgContainer">
-          <img src="./assets/img/profilepicture.png" alt="Neyen Vrhovski"> 
+          <img src="assets/img/profilepicture.png" alt="Neyen Vrhovski"> 
         </div>
         <div class="aboutTextContainer">
           <p>Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con apenas 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguir profesionalizandome y ser cada día mas productivo.</p>
