--- a/src/projects.html
+++ b/src/projects.html
@@ -23,7 +23,7 @@
             <nav class="relative flex items-center justify-between sm:h-10 lg:justify-start" aria-label="Global">
               <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
                 <div class="flex items-center justify-between w-full md:w-auto">
-                  <a href="index.html">
+                  <a href="../index.html">
                     <span class="sr-only">Title</span>
                     <img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg" alt="Icono Principal">
                   </a>
