--- a/src/about.html
+++ b/src/about.html
@@ -49,18 +49,18 @@
           <img src="assets/img/profilepicture.png" alt="Neyen Vrhovski"> 
         </div>
         <div class="aboutTextContainer">
-          <p>Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con apenas 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguir profesionalizandome y ser cada día mas productivo.</p>
+          <p>Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con apenas 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguirme profesionalizando y ser cada día mas productivo.</p>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Mi Formación</span>
           </h2>
           <p>
-            Actualmente estoy cursando la carrera de Desarrollo Front-End con React en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aqui</a>), en el cual se enseña basicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="" class="courseLink">certificado aqui</a>), y el tercero (el cual estoy cursando actualmente) en el que se enseña React JS. Tambien estoy pensando en anotarme al curso de Angular, y seguramente ver tambien algo de Back-End.
+            Actualmente estoy cursando la carrera de Desarrollo Front-End con React en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aqui</a>), en el cual se enseña básicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="" class="courseLink">certificado aqui</a>), y el tercero (el cual estoy cursando actualmente) en el que se enseña React JS. También estoy pensando en anotarme al curso de Angular, y seguramente ver también algo de Back-End.
           </p>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Mi experiencia</span>
           </h2>
           <p>
-             Desde septiembre del 2021 trabajo en una empresa de software llamada <a target="_blank" href="https://www.linkedin.com/company/itrock/mycompany/verification" class="courseLink">IT Rock</a>. Allí me desempeño como desarrollador front-end, encargandome de maquetar con HTML y CSS, y de dar diversas funcionalidades con javascript utilizando frameworks y librerias como bootstrap o react. <span class="courseLink">Si querés ver mis proyectos clickeá en el botón de abajo!</span>
+             Desde septiembre del 2021 trabajo en una empresa de software llamada <a target="_blank" href="https://www.linkedin.com/company/itrock/mycompany/verification" class="courseLink">IT Rock</a>. Allí me desempeño como desarrollador front-end, encargándome de maquetar con HTML y CSS, y de dar diversas funcionalidades con javascript utilizando frameworks y librerías como bootstrap o react. <span class="courseLink">Si querés ver mis proyectos clickeá en el botón de abajo!</span>
           </p>
         </div>
         <a href="projects.html"><button class="hvr-bounce-in projectsButton">Ver mis proyectos</button></a>
