--- a/src/projects.html
+++ b/src/projects.html
@@ -59,13 +59,13 @@
                   <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                     <span class="block">Descripción general</span>
                   </h3>
-                  <p>Del Parque es una empresa de bienes raices con origen en Mexico. Ofrecen diversos proyectos de construcción para que los clientes residan o inviertan. Escencialmente es una pagina estática y serverless a excepción de el formulario de contacto, el cual esta integrado con un servicio de mensajería via mail. Particularmente yo desarrollé toda la funcionalidad del cotizador. El mismo cuenta con una integración a una API de la cual recibimos toda la informacion de departamentos y tipologias, para posteriormente mostrarlos en pantalla. También cuenta con la opción de generar tu propio esquema de pagos para el departamento en particular que elijas, para luego generar un PDF con los datos o enviarlos por mail. <a target="_blank" href="https://delparque.mx/" class="courseLink">Podés ver el proyecto acá</a>.</p>
+                  <p>Del Parque es una empresa de bienes raíces con origen en México. Ofrecen diversos proyectos de construcción para que los clientes residan o inviertan. Esencialmente es una página estática y serverless a excepción de el formulario de contacto, el cual está integrado con un servicio de mensajería vía mail. Particularmente yo desarrollé toda la funcionalidad del cotizador. El mismo cuenta con una integración a una API de la cual recibimos toda la información de departamentos y tipologías, para posteriormente mostrarlos en pantalla. También cuenta con la opción de generar tu propio esquema de pagos para el departamento en particular que elijas, para luego generar un PDF con los datos o enviarlos por mail. <a target="_blank" href="https://delparque.mx/" class="courseLink">Podés ver el proyecto acá</a>.</p>
                 </div>
                 <div class="generalInfoContainer">
                   <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                     <span class="block">Tecnologías usadas</span>
                   </h3>
-                  <p>El proyecto esta construido con React JS y utilizando también Typescript. También utiliza Next JS para mejorar las prácticas de SEO de las cuales carece React nativo, y finalmente para aplicar estilos utiliza el pre-procesador SASS</p>
+                  <p>El proyecto está construido con React JS y utilizando también Typescript. También utiliza Next JS para mejorar las prácticas de SEO de las cuales carece React nativo, y finalmente para aplicar estilos utiliza el preprocesador SASS</p>
                 </div>
               </div>
           </div>
@@ -83,13 +83,13 @@
               <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Descripción general</span>
               </h3>
-              <p>Puertos es una landing page administrada por Consultatio S.A., una empresa de bienes raices. Puntualmente Puertos es uno de los barrios que Consultatio administra. La landing page de Puertos tiene una integración con la API de google maps para mostrar, en distintos mapas, los distintos lotes que tiene el barrio en cuestión. Tambien esta integrada con un backoffice desde donde el personal de Consultatio puede administrar las imagenes, las descripciones y los precios que se muestran en la página. Particularmente yo trabajé en la parte visual de la landing, y ayudando circunstancialmente a integrar el backoffice con la página.<a target="_blank" href="https://www.puertos.ar/" class="courseLink">Podés ver el proyecto acá</a>.</p>
+              <p>Puertos es una landing page administrada por Consultatio S.A., una empresa de bienes raíces. Puntualmente Puertos es uno de los barrios que Consultatio administra. La landing page de Puertos tiene una integración con la API de google maps para mostrar, en distintos mapas, los distintos lotes que tiene el barrio en cuestión. También esté integrada con un backoffice desde donde el personal de Consultatio puede administrar las imágenes, las descripciones y los precios que se muestran en la página. Particularmente yo trabajé en la parte visual de la landing, y ayudando circunstancialmente a integrar el backoffice con la página.<a target="_blank" href="https://www.puertos.ar/" class="courseLink">Podés ver el proyecto acá</a>.</p>
             </div>
             <div class="generalInfoContainer">
               <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Tecnologías usadas</span>
               </h3>
-              <p>Al ser unicamente una landing page con pocas funcionalidades, la página esta hecha principalmente con HTML y CSS, utilizando la herramienta de los archivos .HBS para llevar a cabo una mejor modularización de los componentes de la página. Para las pocas integraciones y funcionalidades que tiene se utilizó JavaScript nativo. Es una aplicación monolítica, ya que tanto la landing page (el front) como el backoffice desde donde se carga la información que se muestra en la landing estan en el mismo repositorio.</p>
+              <p>Al ser únicamente una landing page con pocas funcionalidades, la página está hecha principalmente con HTML y CSS, utilizando la herramienta de los archivos .HBS para llevar a cabo una mejor modularización de los componentes de la página. Para las pocas integraciones y funcionalidades que tiene se utilizó JavaScript nativo. Es una aplicación monolítica, ya que tanto la landing page (el front) como el backoffice desde donde se carga la información que se muestra en la landing están en el mismo repositorio.</p>
             </div>
           </div>
         </div>
@@ -107,13 +107,13 @@
               <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Descripción general</span>
               </h3>
-              <p>Club Qualia es una plataforma de cupones para los clientes de Qualia Seguros. En ella los clientes de Qualia pueden buscar entre numerosos descuentos en distintos rubros y locales por todo Buenos Aires, tanto para canjearlos Presencialmente como online. La página esta integrada mediante una API a un backoffice, tambien administrado por Qualia, en el cual el personal de la empresa puede cargar y borrar cupones para que luego aparezcan en el front. Particularmente yo trabaje en la parte visual de la página. Maquetando y haciendo cambios visuales a medida que el cliente lo iba solicitando. Tambien circunstancialmente modifique algunas cosas de funcionalidad como la integración con la API. <a target="_blank" href="https://club.qualiaseguros.com/" class="courseLink">Podés ver el proyecto acá</a>.</p>
+              <p>Club Qualia es una plataforma de cupones para los clientes de Qualia Seguros. En ella los clientes de Qualia pueden buscar entre numerosos descuentos en distintos rubros y locales por todo Buenos Aires, tanto para canjearlos Presencialmente como online. La página está integrada mediante una API a un backoffice, también administrado por Qualia, en el cual el personal de la empresa puede cargar y borrar cupones para que luego aparezcan en el front. Particularmente yo trabaje en la parte visual de la página. Maquetando y haciendo cambios visuales a medida que el cliente lo iba solicitando. También circunstancialmente modifiqué algunas cosas de funcionalidad como la integración con la API. <a target="_blank" href="https://club.qualiaseguros.com/" class="courseLink">Podés ver el proyecto acá</a>.</p>
             </div>
             <div class="generalInfoContainer">
               <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Tecnologías usadas</span>
               </h3>
-              <p>El proyecto esta construido con React Js, utilizando Next Js para la parte del SEO y Bootstrap y SASS para la parte visual y de maquetación.</p>
+              <p>El proyecto está construido con React Js, utilizando Next Js para la parte del SEO y Bootstrap y SASS para la parte visual y de maquetación.</p>
             </div>
           </div>
         </div>
