--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </h1>
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con apenas 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguir profesionalizandome y ser cada día mas productivo.</p>
+              Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con apenas 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguirme profesionalizando y ser cada día más productivo.</p>
               <a href="./src/projects.html"><button class="hvr-bounce-in projectsButton">Ver mis proyectos</button></a>
           </div>
         </main>
@@ -60,7 +60,7 @@
     <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
       <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
         <span class="block">Mis redes</span>
-        <span class="block text-indigo-600">Contactame</span>
+        <span class="block text-indigo-600">Contáctame</span>
       </h2>
       <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0 footerContainer">
         <a target="_blank" href="https://github.com/NeyenVrhovski">
