--- a/src/about.html
+++ b/src/about.html
@@ -54,7 +54,7 @@
             <span class="block">Mi Formación</span>
           </h2>
           <p>
-            Actualmente estoy cursando la carrera de Desarrollo Front-End con React en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aqui</a>), en el cual se enseña básicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="" class="courseLink">certificado aqui</a>), y el tercero (el cual estoy cursando actualmente) en el que se enseña React JS. También estoy pensando en anotarme al curso de Angular, y seguramente ver también algo de Back-End.
+            Actualmente estoy cursando la carrera de Desarrollo Front-End con React en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aqui</a>), en el cual se enseña básicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="https://www.coderhouse.com/certificados/62fa6e4f4bc856002414fa93" class="courseLink">certificado aqui</a>), y el tercero (el cual estoy cursando actualmente) en el que se enseña React JS. También estoy pensando en anotarme al curso de Angular, y seguramente ver también algo de Back-End.
           </p>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Mi experiencia</span>
