--- a/src/contact.html
+++ b/src/contact.html
@@ -52,7 +52,7 @@
                     <span class="block text-indigo-600">Linkedin</span>
                 </h2>
                 <a target="_blank" href="https://www.linkedin.com/in/neyen-vrhovski-1138a3224/">
-                    <img class="socialMediaIcon hvr-wobble-vertical" src="./assets/icons/linkedinBig-icon.png"/>
+                    <img class="socialMediaIcon hvr-wobble-vertical" src="./assets/icons/linkedin-icon.png"/>
                 </a>
             </div>
             <div class="socialMediaContainer">
@@ -60,7 +60,7 @@
                     <span class="block text-indigo-600">Github</span>
                 </h2>
                 <a target="_blank" href="https://github.com/NeyenVrhovski">
-                    <img class="socialMediaIcon hvr-push" src="./assets/icons/githubBig-icon.png"/>
+                    <img class="socialMediaIcon hvr-push" src="./assets/icons/github-icon.png"/>
                 </a>
             </div>
             <div class="socialMediaContainer">
@@ -68,7 +68,7 @@
                     <span class="block text-indigo-600">Email</span>
                 </h2>
                 <a target="_blank" href="mailto:neyenvrhovski@gmail.com">
-                    <img class="socialMediaIcon hvr-bounce-out" src="./assets/icons/mailBig-icon.png"/>
+                    <img class="socialMediaIcon hvr-bounce-out" src="./assets/icons/mail-icon.png"/>
                 </a>
             </div>
             <div class="socialMediaContainer">
@@ -76,7 +76,7 @@
                     <span class="block text-indigo-600">Instagram</span>
                 </h2>
                 <a target="_blank" href="https://www.instagram.com/neyenvrhovski/">
-                    <img class="socialMediaIcon hvr-wobble-top" src="./assets/icons/instagramBig-icon.png"/>
+                    <img class="socialMediaIcon hvr-wobble-top" src="./assets/icons/instagram-icon.png"/>
                 </a>
             </div>
             <div class="socialMediaContainer">
@@ -84,7 +84,7 @@
                     <span class="block text-indigo-600">Twitter</span>
                 </h2>
                 <a target="_blank" href="https://twitter.com/neyenvrhovsk">
-                    <img class="socialMediaIcon hvr-wobble-skew" src="./assets/icons/twitterBig-icon.png"/>
+                    <img class="socialMediaIcon hvr-wobble-skew" src="./assets/icons/twitter-icon.png"/>
                 </a>
             </div>
             <div class="socialMediaContainer">
@@ -92,7 +92,7 @@
                     <span class="block text-indigo-600">Facebook</span>
                 </h2>
                 <a target="_blank" href="https://www.facebook.com/neyen.vrhovski">
-                    <img class="socialMediaIcon hvr-pulse-grow" src="./assets/icons/facebookBig-icon.png"/>
+                    <img class="socialMediaIcon hvr-pulse-grow" src="./assets/icons/facebook-icon.png"/>
                 </a>
             </div>
           </div>
