--- a/src/about.html
+++ b/src/about.html
@@ -54,7 +54,7 @@
             <span class="block">Mi Formación</span>
           </h2>
           <p>
-            Actualmente estoy cursando la carrera de Desarrollo Front-End con React en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aqui</a>), en el cual se enseña básicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="https://www.coderhouse.com/certificados/62fa6e4f4bc856002414fa93" class="courseLink">certificado aqui</a>), y el tercero (el cual estoy cursando actualmente) en el que se enseña React JS. También estoy pensando en anotarme al curso de Angular, y seguramente ver también algo de Back-End.
+            Soy graduado de la carrera de Desarrollo Frontend en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aquí</a>), en el cual se enseña básicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="https://www.coderhouse.com/certificados/62fa6e4f4bc856002414fa93" class="courseLink">certificado aquí</a>), y el tercero de React, en el que el proyecto final consistió en crear un e-commerce integrado con Firebase. (<a target="_blank" href="https://www.coderhouse.com/certificados/6373d876c0797c000efc2ee6" class="courseLink">certificado aquí</a>). El título final de la carrera se puede ver (<a target="_blank" href="https://www.coderhouse.com/certificados/6373d877c0797c000efc2ee9" class="courseLink">aquí</a>). Actualmente estoy haciendo el curso de Angular, ya que en la empresa en la que trabajo hay muchos proyectos que usan esa tecnología. Luego de finalizarlo me gustaría empezar a ver algo de Backend.
           </p>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Tecnologías que uso</span>
@@ -69,12 +69,13 @@
               <img src="./assets/icons/sassIcon.png"/>
               <img src="./assets/icons/dockerIcon.png"/>
               <img src="./assets/icons/bootstrapIcon.png"/>
+              <img src="./assets/icons/angular-icon.png"/>
           </div>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Mi experiencia</span>
           </h2>
           <p>
-             Desde septiembre del 2021 trabajo en una empresa de software llamada <a target="_blank" href="https://www.linkedin.com/company/itrock/mycompany/verification" class="courseLink">IT Rock</a>. Allí me desempeño como desarrollador front-end, encargándome de maquetar con HTML y CSS, y de dar diversas funcionalidades con javascript utilizando frameworks y librerías como bootstrap o react. <span class="courseLink">Si querés ver mis proyectos clickeá en el botón de abajo!</span>
+             Desde septiembre del 2021 trabajo en una empresa de software llamada <a target="_blank" href="https://www.linkedin.com/company/itrock/mycompany/verification" class="courseLink">IT Rock</a>. Allí me desempeño como desarrollador front-end, encargándome de maquetar con HTML y CSS, y de dar diversas funcionalidades con javascript utilizando frameworks y librerías como Bootstrap, React o Angular. <span class="courseLink">Si querés ver mis proyectos clickeá en el botón de abajo!</span>
           </p>
         </div>
         <a href="projects.html"><button class="hvr-bounce-in projectsButton">Ver mis proyectos</button></a>
