--- a/src/about.html
+++ b/src/about.html
@@ -49,7 +49,7 @@
           <img src="assets/img/profilepicture.png" alt="Neyen Vrhovski"> 
         </div>
         <div class="aboutTextContainer">
-          <p>Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con apenas 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguirme profesionalizando y ser cada día mas productivo.</p>
+          <p>Soy un desarrollador Front-End de Argentina. Actualmente trabajo en una empresa de software llamada IT Rock. Con 1 año de experiencia laboral, sigo ávido de aprender a usar nuevas tecnologías y herramientas para seguirme profesionalizando y ser cada día mas productivo.</p>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Mi Formación</span>
           </h2>
