--- a/src/projects.html
+++ b/src/projects.html
@@ -65,7 +65,7 @@
                   <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                     <span class="block">Tecnologías usadas</span>
                   </h3>
-                  <p>El proyecto está construido con React JS y utilizando también Typescript. También utiliza Next JS para mejorar las prácticas de SEO de las cuales carece React nativo, y finalmente para aplicar estilos utiliza el preprocesador SASS</p>
+                  <p>El proyecto está construido con Next JS, utilizando también Typescript. Para aplicar estilos utiliza el preprocesador SASS</p>
                 </div>
               </div>
           </div>
@@ -113,7 +113,55 @@
               <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Tecnologías usadas</span>
               </h3>
-              <p>El proyecto está construido con React Js, utilizando Next Js para la parte del SEO y Bootstrap y SASS para la parte visual y de maquetación.</p>
+              <p>El proyecto está construido con Next Js, utilizando Bootstrap y SASS para la parte visual y de maquetación.</p>
+            </div>
+          </div>
+        </div>
+        <div class="projectMainContainer">
+          <div class="projectTitleContainer">
+            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+              <span class="block text-indigo-600">Shell Box</span>
+            </h2>
+          </div>
+          <div class="projectImgContainer">
+            <img src="./assets/img/banner_shell.png" alt="ShellBox"/>
+          </div>
+          <div class="projectInfoContainer">
+            <div class="generalInfoContainer">
+              <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                <span class="block">Descripción general</span>
+              </h3>
+              <p>Shell Box es la pagina web de fidelidad de Shell, donde los clientes regulares de Shell pueden acumular puntos comprando sus productos y luego canjearlos por regalos. Tambien tienen una gran variedad de beneficios gratis que el usuario puede canjear en el momento para disfrutar de grandes descuentos. Tambien cuenta con un conversor en el cual puede cambiar sus puntos ShellBox por millas del programa LatamPass y viceversa. <a target="_blank" href="https://shellbox.shell.com.ar/" class="courseLink">Podés ver el proyecto acá</a>.</p>
+            </div>
+            <div class="generalInfoContainer">
+              <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                <span class="block">Tecnologías usadas</span>
+              </h3>
+              <p>La web esta construida con Angular y utilizando SASS para los estilos. Tiene integración con gran cantidad de microservicios para, por ejemplo, recibir los beneficios, canjearlos, convertir los puntos ShellBox, etc...</p>
+            </div>
+          </div>
+        </div>
+        <div class="projectMainContainer">
+          <div class="projectTitleContainer">
+            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+              <span class="block text-indigo-600">Truco Posta</span>
+            </h2>
+          </div>
+          <div class="projectImgContainer">
+            <img src="./assets/img/banner_truco.png" alt="Truco Posta"/>
+          </div>
+          <div class="projectInfoContainer">
+            <div class="generalInfoContainer">
+              <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                <span class="block">Descripción general</span>
+              </h3>
+              <p>Truco Posta es un juego web y con aplicación mobile para jugar al truco en tiempo real. Tiene la novedad de poder ver y escuchar al oponente y a tus compañeros a traves del sistema de video y voz, haciendo que sea muy parecido a una partida de truco en persona. El usuario puede crear una cuenta, agregar amigos y jugar. Tambien puede pagar una suscripcion para recbir porotos mensuales, los cuales son la moneda necesaria para poder jugar. <a target="_blank" href="https://app.trucoposta.com/" class="courseLink">Podés ver el proyecto acá</a>.</p>
+            </div>
+            <div class="generalInfoContainer">
+              <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                <span class="block">Tecnologías usadas</span>
+              </h3>
+              <p>La parte front-end del juego esta conformada por dos webs distintas. La web principal (donde el usuario agenda partidas, agrega amigos, etc...) esta construida en Angular, y tiene integraciones por ejemplo con Mercadopago para las suscripciones. El lobby (en el que el usuario efectivamente juega al juego) esta hecho en React Js, y tiene integraciones tanto con Twilio (proovedor de voz y video web) como con Godot (empresa argentina de desarrollo de videojuegos) para ejecutar el juego en la plataforma web.</p>
             </div>
           </div>
         </div>
