--- a/src/about.html
+++ b/src/about.html
@@ -54,7 +54,7 @@
             <span class="block">Mi Formación</span>
           </h2>
           <p>
-            Soy graduado de la carrera de Desarrollo Frontend en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aquí</a>), en el cual se enseña básicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="https://www.coderhouse.com/certificados/62fa6e4f4bc856002414fa93" class="courseLink">certificado aquí</a>), y el tercero de React, en el que el proyecto final consistió en crear un e-commerce integrado con Firebase. (<a target="_blank" href="https://www.coderhouse.com/certificados/6373d876c0797c000efc2ee6" class="courseLink">certificado aquí</a>). El título final de la carrera se puede ver (<a target="_blank" href="https://www.coderhouse.com/certificados/6373d877c0797c000efc2ee9" class="courseLink">aquí</a>). Actualmente estoy haciendo el curso de Angular, ya que en la empresa en la que trabajo hay muchos proyectos que usan esa tecnología. Luego de finalizarlo me gustaría empezar a ver algo de Backend.
+            Soy graduado de la carrera de Desarrollo Frontend en Coderhouse, la cual consta de 3 cursos: El primero de desarrollo web (<a target="_blank" href="https://www.coderhouse.com/certificados/6290d832d47a5e0019e5b260" class="courseLink">certificado aquí</a>), en el cual se enseña básicamente HTML5 y CSS3. El segundo de javascript (<a target="_blank" href="https://www.coderhouse.com/certificados/62fa6e4f4bc856002414fa93" class="courseLink">certificado aquí</a>), y el tercero de React, en el que el proyecto final consistió en crear un e-commerce integrado con Firebase. (<a target="_blank" href="https://www.coderhouse.com/certificados/6373d876c0797c000efc2ee6" class="courseLink">certificado aquí</a>). El título final de la carrera se puede ver (<a target="_blank" href="https://www.coderhouse.com/certificados/6373d877c0797c000efc2ee9" class="courseLink">aquí</a>). Posteriormente, hize el curso de Angular, tambien en Coderhouse (<a target="_blank" href="https://www.coderhouse.com/certificados/63e1937d040dc6000eec2406" class="courseLink">certificado aquí</a>), y actualmente estoy haciendo el curso de SQL y bases de datos relacionales, tambien en coderhouse.
           </p>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Tecnologías que uso</span>
@@ -70,6 +70,7 @@
               <img src="./assets/icons/dockerIcon.png"/>
               <img src="./assets/icons/bootstrapIcon.png"/>
               <img src="./assets/icons/angular-icon.png"/>
+              <img src="./assets/icons/redux-icon.png"/>
           </div>
           <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
             <span class="block">Mi experiencia</span>
