--- a/src/projects.html
+++ b/src/projects.html
@@ -161,7 +161,7 @@
               <h3 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Tecnologías usadas</span>
               </h3>
-              <p>La parte front-end del juego esta conformada por dos webs distintas. La web principal (donde el usuario agenda partidas, agrega amigos, etc...) esta construida en Angular, y tiene integraciones por ejemplo con Mercadopago para las suscripciones. El lobby (en el que el usuario efectivamente juega al juego) esta hecho en React Js, y tiene integraciones tanto con Twilio (proovedor de voz y video web) como con Godot (empresa argentina de desarrollo de videojuegos) para ejecutar el juego en la plataforma web.</p>
+              <p>La parte front-end del juego esta conformada por tres webs distintas. La web principal (donde el usuario agenda partidas, agrega amigos, etc...) esta construida en Angular, y tiene integraciones por ejemplo con Mercadopago para las suscripciones. El lobby (en el que el usuario efectivamente juega al juego) esta hecho en React Js, y tiene integraciones tanto con Twilio (proovedor de voz y video web) como con Godot (empresa argentina de desarrollo de videojuegos) para ejecutar el juego en la plataforma web. Y finalmente la landing, la cual es la pagina de presentacion del juego, que esta orientada mas hacia el marketing. La misma esta hecha con Next Js</p>
             </div>
           </div>
         </div>
